# YAL-Hoppie-Helper

./: .gitignore  AGENTS.md  BUILD.md  CMakeLists.txt  INSTALL.md  LICENSE  README.md
deploy/YAL_hoppiehelper/64/: lin.xpl  mac.xpl  win.xpl
src/: HoppieHelper.cpp  YAL_hoppiehelper.cpp
